adjusting 4.13 apis for PV1

--- a/rest_api/monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc
+++ b/rest_api/monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc
@@ -245,7 +245,7 @@ Type::
 
 | `params{}`
 | `array (string)`
-| 
+|
 
 | `path`
 | `string`
@@ -261,7 +261,7 @@ Type::
 
 | `relabelings`
 | `array`
-| RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+| RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `relabelings[]`
 | `object`
@@ -704,7 +704,7 @@ Type::
 Description::
 +
 --
-RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
 Type::
@@ -1334,7 +1334,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc#podmonitor-monitoring-coreos-com-v1[`PodMonitor`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1406,7 +1406,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-DeleteOptions[`DeleteOptions`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1478,7 +1478,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-Patch[`Patch`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1519,7 +1519,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc#podmonitor-monitoring-coreos-com-v1[`PodMonitor`] schema
-| 
+|
 |===
 
 .HTTP responses
