--- a/rest_api/monitoring_apis/probe-monitoring-coreos-com-v1.adoc
+++ b/rest_api/monitoring_apis/probe-monitoring-coreos-com-v1.adoc
@@ -622,7 +622,7 @@ Type::
 
 | `relabelingConfigs`
 | `array`
-| RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+| RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `\tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `relabelingConfigs[]`
 | `object`
@@ -663,7 +663,7 @@ Type::
 Description::
 +
 --
-RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `\__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
 Type::
@@ -1386,7 +1386,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/probe-monitoring-coreos-com-v1.adoc#probe-monitoring-coreos-com-v1[`Probe`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1458,7 +1458,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-DeleteOptions[`DeleteOptions`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1530,7 +1530,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-Patch[`Patch`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1571,7 +1571,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/probe-monitoring-coreos-com-v1.adoc#probe-monitoring-coreos-com-v1[`Probe`] schema
-| 
+|
 |===
 
 .HTTP responses
