--- a/rest_api/monitoring_apis/servicemonitor-monitoring-coreos-com-v1.adoc
+++ b/rest_api/monitoring_apis/servicemonitor-monitoring-coreos-com-v1.adoc
@@ -78,8 +78,8 @@ Required::
 
 | `jobLabel`
 | `string`
-| JobLabel selects the label from the associated Kubernetes service which will be used as the `job` label for all metrics. 
- For example: If in `ServiceMonitor.spec.jobLabel: foo` and in `Service.metadata.labels.foo: bar`, then the `job="bar"` label is added to all metrics. 
+| JobLabel selects the label from the associated Kubernetes service which will be used as the `job` label for all metrics.
+ For example: If in `ServiceMonitor.spec.jobLabel: foo` and in `Service.metadata.labels.foo: bar`, then the `job="bar"` label is added to all metrics.
  If the value of this field is empty or if the label doesn't exist for the given Service, the `job` label of the metrics defaults to the name of the Kubernetes Service.
 
 | `labelLimit`
@@ -229,7 +229,7 @@ Type::
 
 | `params{}`
 | `array (string)`
-| 
+|
 
 | `path`
 | `string`
@@ -245,7 +245,7 @@ Type::
 
 | `relabelings`
 | `array`
-| RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+| RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `relabelings[]`
 | `object`
@@ -688,7 +688,7 @@ Type::
 Description::
 +
 --
-RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few standard Kubernetes fields. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
 Type::
@@ -1356,7 +1356,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/servicemonitor-monitoring-coreos-com-v1.adoc#servicemonitor-monitoring-coreos-com-v1[`ServiceMonitor`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1428,7 +1428,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-DeleteOptions[`DeleteOptions`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1500,7 +1500,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-Patch[`Patch`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1541,7 +1541,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/servicemonitor-monitoring-coreos-com-v1.adoc#servicemonitor-monitoring-coreos-com-v1[`ServiceMonitor`] schema
-| 
+|
 |===
 
 .HTTP responses
