--- a/rest_api/objects/index.adoc
+++ b/rest_api/objects/index.adoc
@@ -702,7 +702,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -745,7 +745,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -788,7 +788,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -831,7 +831,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -874,7 +874,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -917,7 +917,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -960,7 +960,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1003,7 +1003,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1046,7 +1046,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1089,7 +1089,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1132,7 +1132,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1175,7 +1175,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1218,7 +1218,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1261,7 +1261,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1304,7 +1304,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1339,7 +1339,7 @@ Required::
 
 | `items`
 | xref:../oauth_apis/useroauthaccesstoken-oauth-openshift-io-v1.adoc#useroauthaccesstoken-oauth-openshift-io-v1[`array (UserOAuthAccessToken)`]
-| 
+|
 
 | `kind`
 | `string`
@@ -1347,7 +1347,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1390,7 +1390,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1433,7 +1433,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1476,7 +1476,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1519,7 +1519,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1562,7 +1562,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1605,7 +1605,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1648,7 +1648,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1691,7 +1691,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1734,7 +1734,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1777,7 +1777,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -1818,12 +1818,12 @@ Type::
 | Property | Type | Description
 
 | `owned`
-| xref:../objects/index.adoc#com-github-operator-framework-api-pkg-operators-v1alpha1-APIServiceDescription[`array (APIServiceDescription)`]
-| 
+| `array (APIServiceDescription)`
+|
 
 | `required`
-| xref:../objects/index.adoc#com-github-operator-framework-api-pkg-operators-v1alpha1-APIServiceDescription[`array (APIServiceDescription)`]
-| 
+| `array (APIServiceDescription)`
+|
 
 |===
 
@@ -1851,12 +1851,12 @@ Type::
 | Property | Type | Description
 
 | `owned`
-| xref:../objects/index.adoc#com-github-operator-framework-api-pkg-operators-v1alpha1-CRDDescription[`array (CRDDescription)`]
-| 
+| `array (CRDDescription)`
+|
 
 | `required`
-| xref:../objects/index.adoc#com-github-operator-framework-api-pkg-operators-v1alpha1-CRDDescription[`array (CRDDescription)`]
-| 
+| `array (CRDDescription)`
+|
 
 |===
 
@@ -1886,11 +1886,11 @@ Required::
 
 | `supported`
 | `boolean`
-| 
+|
 
 | `type`
 | `string`
-| 
+|
 
 |===
 
@@ -1923,7 +1923,7 @@ Required::
 
 | `items`
 | xref:../operatorhub_apis/packagemanifest-packages-operators-coreos-com-v1.adoc#packagemanifest-packages-operators-coreos-com-v1[`array (PackageManifest)`]
-| 
+|
 
 | `kind`
 | `string`
@@ -1931,7 +1931,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -2505,7 +2505,7 @@ Required::
 
 | `metadata`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ListMeta[`ListMeta`]
-| 
+|
 
 |===
 
@@ -2660,7 +2660,7 @@ Type::
 | defaultMode is optional: mode bits used to set permissions on created files by default. Must be an octal value between 0000 and 0777 or a decimal value between 0 and 511. YAML accepts both octal and decimal values, JSON requires decimal values for mode bits. Defaults to 0644. Directories within the path are not affected by this setting. This might be in conflict with other options that affect the file mode, like fsGroup, and the result can be other mode bits set.
 
 | `items`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-KeyToPath[`array (KeyToPath)`]
+| `array (KeyToPath)`
 | items if unspecified, each key-value pair in the Data field of the referenced ConfigMap will be projected into the volume as a file whose name is the key and content is the value. If specified, the listed keys will be projected into the specified paths, and unlisted keys will not be present. If a key is specified which is not present in the ConfigMap, the volume setup will error unless it is marked optional. Paths must be relative and may not contain the '..' path or start with '..'.
 
 | `name`
@@ -2791,7 +2791,7 @@ Required::
 | Variable references $(VAR_NAME) are expanded using the previously defined environment variables in the container and any service environment variables. If a variable cannot be resolved, the reference in the input string will be unchanged. Double $$ are reduced to a single $, which allows for escaping the $(VAR_NAME) syntax: i.e. "$$(VAR_NAME)" will produce the string literal "$(VAR_NAME)". Escaped references will never be expanded, regardless of whether the variable exists or not. Defaults to "".
 
 | `valueFrom`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-EnvVarSource[`EnvVarSource`]
+| `EnvVarSource`
 | Source for the environment variable's value. Cannot be used if value is not empty.
 
 |===
@@ -2962,15 +2962,15 @@ Required::
 
 | `lastTransitionTime`
 | xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-Time[`Time`]
-| 
+|
 
 | `message`
 | `string`
-| 
+|
 
 | `reason`
 | `string`
-| 
+|
 
 | `status`
 | `string`
@@ -3461,11 +3461,11 @@ Required::
 
 | `status`
 | `string`
-| 
+|
 
 | `type`
 | `string`
-| 
+|
 
 |===
 
@@ -3577,15 +3577,15 @@ Type::
 | accessModes contains all ways the volume can be mounted. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#access-modes
 
 | `awsElasticBlockStore`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-AWSElasticBlockStoreVolumeSource[`AWSElasticBlockStoreVolumeSource`]
+| `AWSElasticBlockStoreVolumeSource`
 | awsElasticBlockStore represents an AWS Disk resource that is attached to a kubelet's host machine and then exposed to the pod. More info: https://kubernetes.io/docs/concepts/storage/volumes#awselasticblockstore
 
 | `azureDisk`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-AzureDiskVolumeSource[`AzureDiskVolumeSource`]
+| `AzureDiskVolumeSource`
 | azureDisk represents an Azure Data Disk mount on the host and bind mount to the pod.
 
 | `azureFile`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-AzureFilePersistentVolumeSource[`AzureFilePersistentVolumeSource`]
+| `AzureFilePersistentVolumeSource`
 | azureFile represents an Azure File Service mount on the host and bind mount to the pod.
 
 | `capacity`
@@ -3593,11 +3593,11 @@ Type::
 | capacity is the description of the persistent volume's resources and capacity. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#capacity
 
 | `cephfs`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-CephFSPersistentVolumeSource[`CephFSPersistentVolumeSource`]
+| `CephFSPersistentVolumeSource`
 | cephFS represents a Ceph FS mount on the host that shares a pod's lifetime
 
 | `cinder`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-CinderPersistentVolumeSource[`CinderPersistentVolumeSource`]
+| `CinderPersistentVolumeSource`
 | cinder represents a cinder volume attached and mounted on kubelets host machine. More info: https://examples.k8s.io/mysql-cinder-pd/README.md
 
 | `claimRef`
@@ -3605,39 +3605,39 @@ Type::
 | claimRef is part of a bi-directional binding between PersistentVolume and PersistentVolumeClaim. Expected to be non-nil when bound. claim.VolumeName is the authoritative bind between PV and PVC. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#binding
 
 | `csi`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-CSIPersistentVolumeSource[`CSIPersistentVolumeSource`]
+| `CSIPersistentVolumeSource`
 | csi represents storage that is handled by an external CSI driver (Beta feature).
 
 | `fc`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-FCVolumeSource[`FCVolumeSource`]
+| `FCVolumeSource`
 | fc represents a Fibre Channel resource that is attached to a kubelet's host machine and then exposed to the pod.
 
 | `flexVolume`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-FlexPersistentVolumeSource[`FlexPersistentVolumeSource`]
+| `FlexPersistentVolumeSource`
 | flexVolume represents a generic volume resource that is provisioned/attached using an exec based plugin.
 
 | `flocker`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-FlockerVolumeSource[`FlockerVolumeSource`]
+| `FlockerVolumeSource`
 | flocker represents a Flocker volume attached to a kubelet's host machine and exposed to the pod for its usage. This depends on the Flocker control service being running
 
 | `gcePersistentDisk`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-GCEPersistentDiskVolumeSource[`GCEPersistentDiskVolumeSource`]
+| `GCEPersistentDiskVolumeSource`
 | gcePersistentDisk represents a GCE Disk resource that is attached to a kubelet's host machine and then exposed to the pod. Provisioned by an admin. More info: https://kubernetes.io/docs/concepts/storage/volumes#gcepersistentdisk
 
 | `glusterfs`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-GlusterfsPersistentVolumeSource[`GlusterfsPersistentVolumeSource`]
+| `GlusterfsPersistentVolumeSource`
 | glusterfs represents a Glusterfs volume that is attached to a host and exposed to the pod. Provisioned by an admin. More info: https://examples.k8s.io/volumes/glusterfs/README.md
 
 | `hostPath`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-HostPathVolumeSource[`HostPathVolumeSource`]
+| `HostPathVolumeSource`
 | hostPath represents a directory on the host. Provisioned by a developer or tester. This is useful for single-node development and testing only! On-host storage is not supported in any way and WILL NOT WORK in a multi-node cluster. More info: https://kubernetes.io/docs/concepts/storage/volumes#hostpath
 
 | `iscsi`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-ISCSIPersistentVolumeSource[`ISCSIPersistentVolumeSource`]
+| `ISCSIPersistentVolumeSource`
 | iscsi represents an ISCSI Disk resource that is attached to a kubelet's host machine and then exposed to the pod. Provisioned by an admin.
 
 | `local`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-LocalVolumeSource[`LocalVolumeSource`]
+| `LocalVolumeSource`
 | local represents directly-attached storage with node affinity
 
 | `mountOptions`
@@ -3645,11 +3645,11 @@ Type::
 | mountOptions is the list of mount options, e.g. ["ro", "soft"]. Not validated - mount will simply fail if one is invalid. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes/#mount-options
 
 | `nfs`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-NFSVolumeSource[`NFSVolumeSource`]
+| `NFSVolumeSource`
 | nfs represents an NFS mount on the host. Provisioned by an admin. More info: https://kubernetes.io/docs/concepts/storage/volumes#nfs
 
 | `nodeAffinity`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-VolumeNodeAffinity[`VolumeNodeAffinity`]
+| `VolumeNodeAffinity`
 | nodeAffinity defines constraints that limit what nodes this volume can be accessed from. This field influences the scheduling of pods that use this volume.
 
 | `persistentVolumeReclaimPolicy`
@@ -3662,23 +3662,23 @@ Possible enum values:
  - `"Retain"` means the volume will be left in its current phase (Released) for manual reclamation by the administrator. The default policy is Retain.
 
 | `photonPersistentDisk`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-PhotonPersistentDiskVolumeSource[`PhotonPersistentDiskVolumeSource`]
+| `PhotonPersistentDiskVolumeSource`
 | photonPersistentDisk represents a PhotonController persistent disk attached and mounted on kubelets host machine
 
 | `portworxVolume`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-PortworxVolumeSource[`PortworxVolumeSource`]
+| `PortworxVolumeSource`
 | portworxVolume represents a portworx volume attached and mounted on kubelets host machine
 
 | `quobyte`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-QuobyteVolumeSource[`QuobyteVolumeSource`]
+| `QuobyteVolumeSource`
 | quobyte represents a Quobyte mount on the host that shares a pod's lifetime
 
 | `rbd`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-RBDPersistentVolumeSource[`RBDPersistentVolumeSource`]
+| `RBDPersistentVolumeSource`
 | rbd represents a Rados Block Device mount on the host that shares a pod's lifetime. More info: https://examples.k8s.io/volumes/rbd/README.md
 
 | `scaleIO`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-ScaleIOPersistentVolumeSource[`ScaleIOPersistentVolumeSource`]
+| `ScaleIOPersistentVolumeSource`
 | scaleIO represents a ScaleIO persistent volume attached and mounted on Kubernetes nodes.
 
 | `storageClassName`
@@ -3686,7 +3686,7 @@ Possible enum values:
 | storageClassName is the name of StorageClass to which this persistent volume belongs. Empty value means that this volume does not belong to any StorageClass.
 
 | `storageos`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-StorageOSPersistentVolumeSource[`StorageOSPersistentVolumeSource`]
+| `StorageOSPersistentVolumeSource`
 | storageOS represents a StorageOS volume that is attached to the kubelet's host machine and mounted into the pod More info: https://examples.k8s.io/volumes/storageos/README.md
 
 | `volumeMode`
@@ -3694,7 +3694,7 @@ Possible enum values:
 | volumeMode defines if a volume is intended to be used with a formatted filesystem or to remain in raw block state. Value of Filesystem is implied when not included in spec.
 
 | `vsphereVolume`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-VsphereVirtualDiskVolumeSource[`VsphereVirtualDiskVolumeSource`]
+| `VsphereVirtualDiskVolumeSource`
 | vsphereVolume represents a vSphere volume attached and mounted on kubelets host machine
 
 |===
@@ -3807,7 +3807,7 @@ Type::
 | Standard object's metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
 
 | `spec`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-PodSpec[`PodSpec`]
+| `PodSpec`
 | Specification of the desired behavior of the pod. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#spec-and-status
 
 |===
@@ -3920,7 +3920,7 @@ Type::
 | hard is the set of desired hard limits for each named resource. More info: https://kubernetes.io/docs/concepts/policy/resource-quotas/
 
 | `scopeSelector`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-ScopeSelector[`ScopeSelector`]
+| `ScopeSelector`
 | scopeSelector is also a collection of filters like scopes that must match each object tracked by a quota but expressed using ScopeSelectorOperator in combination with possible values. For a resource to match, both scopes AND scopeSelector (if specified in spec), must be matched.
 
 | `scopes`
@@ -3982,7 +3982,7 @@ Type::
 | Property | Type | Description
 
 | `claims`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-ResourceClaim[`array (ResourceClaim)`]
+| `array (ResourceClaim)`
 | Claims lists the names of resources, defined in spec.resourceClaims, that are used by this container.
 
 This is an alpha field and requires enabling the DynamicResourceAllocation feature gate.
@@ -4119,7 +4119,7 @@ Type::
 | defaultMode is Optional: mode bits used to set permissions on created files by default. Must be an octal value between 0000 and 0777 or a decimal value between 0 and 511. YAML accepts both octal and decimal values, JSON requires decimal values for mode bits. Defaults to 0644. Directories within the path are not affected by this setting. This might be in conflict with other options that affect the file mode, like fsGroup, and the result can be other mode bits set.
 
 | `items`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-KeyToPath[`array (KeyToPath)`]
+| `array (KeyToPath)`
 | items If unspecified, each key-value pair in the Data field of the referenced Secret will be projected into the volume as a file whose name is the key and content is the value. If specified, the listed keys will be projected into the specified paths, and unlisted keys will not be present. If a key is specified which is not present in the Secret, the volume setup will error unless it is marked optional. Paths must be relative and may not contain the '..' path or start with '..'.
 
 | `optional`
@@ -4288,7 +4288,7 @@ Type::
 | Property | Type | Description
 
 | `matchLabelExpressions`
-| xref:../objects/index.adoc#io-k8s-api-core-v1-TopologySelectorLabelRequirement[`array (TopologySelectorLabelRequirement)`]
+| `array (TopologySelectorLabelRequirement)`
 | A list of topology selector requirements by labels.
 
 |===
@@ -5119,27 +5119,27 @@ Type::
 
 | `$ref`
 | `string`
-| 
+|
 
 | `$schema`
 | `string`
-| 
+|
 
 | `additionalItems`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaPropsOrBool[``]
-| 
+| ``
+|
 
 | `additionalProperties`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaPropsOrBool[``]
-| 
+| ``
+|
 
 | `allOf`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[`array (undefined)`]
-| 
+| `array (undefined)`
+|
 
 | `anyOf`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[`array (undefined)`]
-| 
+| `array (undefined)`
+|
 
 | `default`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSON[`JSON`]
@@ -5147,35 +5147,35 @@ Type::
 
 | `definitions`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[`object (undefined)`]
-| 
+|
 
 | `dependencies`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaPropsOrStringArray[`object (undefined)`]
-| 
+| `object (undefined)`
+|
 
 | `description`
 | `string`
-| 
+|
 
 | `enum`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSON[`array (JSON)`]
-| 
+|
 
 | `example`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSON[`JSON`]
-| 
+|
 
 | `exclusiveMaximum`
 | `boolean`
-| 
+|
 
 | `exclusiveMinimum`
 | `boolean`
-| 
+|
 
 | `externalDocs`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-ExternalDocumentation[`ExternalDocumentation`]
-| 
+| `ExternalDocumentation`
+|
 
 | `format`
 | `string`
@@ -5185,87 +5185,87 @@ Type::
 
 | `id`
 | `string`
-| 
+|
 
 | `items`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaPropsOrArray[``]
-| 
+| ``
+|
 
 | `maxItems`
 | `integer`
-| 
+|
 
 | `maxLength`
 | `integer`
-| 
+|
 
 | `maxProperties`
 | `integer`
-| 
+|
 
 | `maximum`
 | `number`
-| 
+|
 
 | `minItems`
 | `integer`
-| 
+|
 
 | `minLength`
 | `integer`
-| 
+|
 
 | `minProperties`
 | `integer`
-| 
+|
 
 | `minimum`
 | `number`
-| 
+|
 
 | `multipleOf`
 | `number`
-| 
+|
 
 | `not`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[``]
-| 
+|
 
 | `nullable`
 | `boolean`
-| 
+|
 
 | `oneOf`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[`array (undefined)`]
-| 
+| `array (undefined)`
+|
 
 | `pattern`
 | `string`
-| 
+|
 
 | `patternProperties`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[`object (undefined)`]
-| 
+|
 
 | `properties`
 | xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSONSchemaProps[`object (undefined)`]
-| 
+|
 
 | `required`
 | `array (string)`
-| 
+|
 
 | `title`
 | `string`
-| 
+|
 
 | `type`
 | `string`
-| 
+|
 
 | `uniqueItems`
 | `boolean`
-| 
+|
 
 | `x-kubernetes-embedded-resource`
 | `boolean`
@@ -5325,7 +5325,7 @@ Defaults to atomic for arrays.
 | x-kubernetes-preserve-unknown-fields stops the API server decoding step from pruning fields which are not specified in the validation schema. This affects fields recursively, but switches back to normal pruning behaviour if nested properties or additionalProperties are specified in the schema. This can either be true or undefined. False is forbidden.
 
 | `x-kubernetes-validations`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-ValidationRule[`array (ValidationRule)`]
+| array (ValidationRule)`
 | x-kubernetes-validations describes a list of validation rules written in the CEL expression language. This field is an alpha-level. Using this field requires the feature gate `CustomResourceValidationExpressions` to be enabled.
 
 |===
@@ -5353,7 +5353,7 @@ The serialization format is:
 
 	(Note that 1024 = 1Ki but 1000 = 1k; I didn't choose the capitalization.)
 
-<decimalExponent> ::= "e" <signedNumber> \| "E" <signedNumber> 
+<decimalExponent> ::= "e" <signedNumber> \| "E" <signedNumber>
 
 No matter which of the three exponent forms is used, no quantity may represent a number greater than 2^63-1 in magnitude, nor may it have more than 3 decimal places. Numbers larger or more precise will be capped or rounded up. (E.g.: 0.1m will rounded up to 1m.) This may be extended in the future if we require larger or smaller quantities.
 
@@ -5476,7 +5476,7 @@ Type::
 | Deprecated: please use the PropagationPolicy, this field will be deprecated in 1.7. Should the dependent objects be orphaned. If true/false, the "orphan" finalizer will be added to/removed from the object's finalizers list. Either this field or PropagationPolicy may be set, but not both.
 
 | `preconditions`
-| xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-Preconditions[`Preconditions`]
+| Preconditions`
 | Must be fulfilled before a deletion is carried out. If not possible, a 409 Conflict status will be returned.
 
 | `propagationPolicy`
@@ -5512,15 +5512,15 @@ Required::
 
 | `group`
 | `string`
-| 
+|
 
 | `kind`
 | `string`
-| 
+|
 
 | `version`
 | `string`
-| 
+|
 
 |===
 
@@ -5546,7 +5546,7 @@ Type::
 | Property | Type | Description
 
 | `matchExpressions`
-| xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-LabelSelectorRequirement[`array (LabelSelectorRequirement)`]
+| `array (LabelSelectorRequirement)`
 | matchExpressions is a list of label selector requirements. The requirements are ANDed.
 
 | `matchLabels`
@@ -5671,7 +5671,7 @@ Applied only if Name is not specified. More info: https://git.k8s.io/community/c
 | Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels
 
 | `managedFields`
-| xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-ManagedFieldsEntry[`array (ManagedFieldsEntry)`]
+| `array (ManagedFieldsEntry)`
 | ManagedFields maps workflow-id and version to the set of fields that are managed by that workflow. This is mostly for internal housekeeping, and users typically shouldn't need to set or understand this field. A workflow can be the user's name, a controller's name, or the name of a specific apply path like "ci-cd". The set of fields is always in the version that the workflow used when modifying the object.
 
 | `name`
@@ -5685,7 +5685,7 @@ Applied only if Name is not specified. More info: https://git.k8s.io/community/c
 Must be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces
 
 | `ownerReferences`
-| xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-OwnerReference[`array (OwnerReference)`]
+| array (OwnerReference)`
 | List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller.
 
 | `resourceVersion`
@@ -5751,7 +5751,7 @@ Type::
 | Suggested HTTP return code for this status, 0 if not set.
 
 | `details`
-| xref:../objects/index.adoc#io-k8s-apimachinery-pkg-apis-meta-v1-StatusDetails[`StatusDetails`]
+| StatusDetails`
 | Extended data associated with the reason.  Each reason may define its own extended details. This field is optional and the data returned is not guaranteed to conform to any schema except that defined by the reason type.
 
 | `kind`
@@ -5825,7 +5825,7 @@ Required::
 
 | `type`
 | `string`
-| 
+|
 
 |===
 
