fixing 4.13 api xref

--- a/rest_api/objects/index.adoc
+++ b/rest_api/objects/index.adoc
@@ -5142,7 +5142,7 @@ Type::
 |
 
 | `default`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSON[`JSON`]
+| `JSON`
 | default is a default value for undefined object fields. Defaulting is a beta feature under the CustomResourceDefaulting feature gate. Defaulting requires spec.preserveUnknownFields to be false.
 
 | `definitions`
@@ -5158,11 +5158,11 @@ Type::
 |
 
 | `enum`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSON[`array (JSON)`]
+| `array (JSON)`
 |
 
 | `example`
-| xref:../objects/index.adoc#io-k8s-apiextensions-apiserver-pkg-apis-apiextensions-v1-JSON[`JSON`]
+| `JSON`
 |
 
 | `exclusiveMaximum`
