--- a/edge_computing/ztp-deploying-far-edge-clusters-at-scale.adoc
+++ b/edge_computing/ztp-deploying-far-edge-clusters-at-scale.adoc
@@ -22,7 +22,7 @@ include::snippets/pgt-deprecation-notice.adoc[]
 [role="_additional-resources"]
 .Additional resources
 
-* xref:../edge_computing/policygenerator_for_ztp/ztp-configuring-managed-clusters-policygenerator.adoc#ztp-configuring-managed-clusters-policygenerator[Configuring managed cluster policies by using PolicyGenerator resources]
+//* xref:../this/is/a/broken/xref.adoc
 
 * xref:../edge_computing/policygenerator_for_ztp/ztp-configuring-managed-clusters-policygenerator.adoc#ztp-comparing-pgt-and-rhacm-pg-patching-strategies_ztp-configuring-managed-clusters-policygenerator[Comparing {rh-rhacm} PolicyGenerator and PolicyGenTemplate resource patching]
 
