--- a/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
@@ -1,14 +1,18 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-oadp-ibm-cloud"]
-= Configuring the OpenShift API for Data Protection with IBM Cloud
+= Configuring the OpenShift API for Data Protection with {ibm-cloud-title}
 include::_attributes/common-attributes.adoc[]
 :context: installing-oadp-ibm-cloud
+:installing-oadp-ibm-cloud:
 
 
 toc::[]
 
-You install the {oadp-first} Operator on an {ibm-cloud-title} cluster to backup and restore applications on the cluster. You configure IBM Cloud Object Storage (COS) to store the backups.
+You install the {oadp-first} Operator on an {ibm-cloud-title} cluster to backup and restore applications on the cluster. You configure {ibm-cloud-object-storage} to store the backups.
 
-include::modules/creating-ibm-cos-instance.adoc[leveloffset=+1]
+//include::modules/creating-ibm-cos-instance.adoc[leveloffset=+1]
 include::modules/configuring-ibm-cos.adoc[leveloffset=+1]
+include::modules/oadp-installing-dpa-1-3.adoc[leveloffset=+1]
+
+:!installing-oadp-ibm-cloud:
 
