--- a/backup_and_restore/application_backup_and_restore/oadp-rosa/oadp-rosa-backing-up-applications.adoc
+++ b/backup_and_restore/application_backup_and_restore/oadp-rosa/oadp-rosa-backing-up-applications.adoc
@@ -3,6 +3,7 @@
 = Backing up applications on ROSA clusters using OADP
 include::_attributes/common-attributes.adoc[]
 :context: oadp-rosa-backing-up-applications
+:oadp-rosa-backing-up-applications:
 
 toc::[]
 
@@ -41,3 +42,7 @@ include::modules/installing-oadp-rosa-sts.adoc[leveloffset=+1]
 include::modules/performing-a-backup-oadp-rosa-sts.adoc[leveloffset=+2]
 
 include::modules/cleanup-a-backup-oadp-rosa-sts.adoc[leveloffset=+2]
+
+include::snippets/operator-additional-resources.adoc[]
+
+:oadp-rosa-backing-up-applications!:
