Fixing a few typos

--- a/modules/cnf-image-based-upgrade-seed-image-config.adoc
+++ b/modules/cnf-image-based-upgrade-seed-image-config.adoc
@@ -20,7 +20,7 @@ Therefore, the seed image generated from the seed cluster cannot contain any clu
 endif::[]
 
 ifdef::ibi[]
-You can create a seed image from a {sno} cluster with with the same hardware as your bare-metal host, and with a similar target cluster configuration. However, the seed image generated from the seed cluster cannot contain any cluster-specific configuration.
+You can create a seed image from a {sno} cluster with the same hardware as your bare-metal host, and with a similar target cluster configuration. However, the seed image generated from the seed cluster cannot contain any cluster-specific configuration.
 endif::[]
 
 The following table lists the components, resources, and configurations that you must and must not include in your seed image:
