--- a/modules/cnf-running-the-performance-creator-profile-offline.adoc
+++ b/modules/cnf-running-the-performance-creator-profile-offline.adoc
@@ -6,7 +6,7 @@
 [id="running-the-performance-profile-creator-wrapper-script_{context}"]
 = Running the Performance Profile Creator wrapper script
 
-The wrapper script simplifies the process of creating a performance profile with the Performance Profile Creator (PPC) tool. The script handles tasks such as pulling and running the required container image, mounting directories into the container, and providing parameters directly to the container through Podman. 
+The wrapper script simplifies the process of creating a performance profile with the Performance Profile Creator (PPC) tool. The script handles tasks such as pulling and running the required container image, mounting directories into the container, and providing parameters directly to the container through Podman.
 
 For more information about the Performance Profile Creator arguments, see the section _"Performance Profile Creator arguments"_.
 
@@ -183,7 +183,7 @@ Flags:
 +
 [NOTE]
 ====
-You can optionally set a path for the Node Tuning Operator image using the `-p` option. If you do not set a path, the wrapper script uses the default image: `registry.redhat.io/openshift4/ose-cluster-node-tuning-rhel9-operator:vBranch Build`.
+You can optionally set a path for the Node Tuning Operator image using the `-p` option. If you do not set a path, the wrapper script uses the default image: `registry.redhat.io/openshift4/ose-cluster-node-tuning-rhel9-operator:v{product-version}`.
 ====
 
 . To display information about the cluster, run the PPC tool with the `log` argument by running the following command:
@@ -216,7 +216,7 @@ level=info msg="CPU(s): 4"
 level=info msg=---
 ----
 
-. Create a performance profile by running the following command. 
+. Create a performance profile by running the following command.
 +
 [source,terminal]
 ----
