--- a/modules/ibi-extra-manifests-standalone.adoc
+++ b/modules/ibi-extra-manifests-standalone.adoc
@@ -1,18 +1,18 @@
 // Module included in the following assemblies:
 //
-// * edge_computing/ibi-edge-image-based-install.adoc 
+// * edge_computing/ibi-edge-image-based-install.adoc
 
 :_mod-docs-content-type: PROCEDURE
 [id="ibi-extra-manifest-standalone_{context}"]
 = Configuring resources for extra manifests
 
-You can optionally define additional resources in an image-based deployment for {sno} clusters. 
+You can optionally define additional resources in an image-based deployment for {sno} clusters.
 
 Create the additional resources in an `extra-manifests` folder in the same working directory that has the `install-config.yaml` and `image-based-config.yaml` manifests.
 
 == Creating a resource in the extra-manifests folder
 
-You can create a resource in the `extra-manifests` folder of your working directory to add extra manifests to the image-based deployment for {sno} clusters. 
+You can create a resource in the `extra-manifests` folder of your working directory to add extra manifests to the image-based deployment for {sno} clusters.
 
 The following example adds an single-root I/O virtualization (SR-IOV) network to the deployment.
 
@@ -22,7 +22,7 @@ The following example adds an single-root I/O virtualization (SR-IOV) network to
 
 .Procedure
 
-. Go to your working directory and create the `extra-manifests` folder by running the follow command:
+. Go to your working directory and create the `extra-manifests` folder by running the following command:
 +
 [source,terminal]
 ----
