--- a/nodes/nodes/nodes-nodes-adding-node-iso.adoc
+++ b/nodes/nodes/nodes-nodes-adding-node-iso.adoc
@@ -30,7 +30,7 @@ You can add nodes with this method in the following two ways:
 
 * Adding one or more nodes using a configuration file.
 +
-You can specify configurations for one or more nodes in the `nodes-config.yaml` file before running the the `oc adm node-image create` command.
+You can specify configurations for one or more nodes in the `nodes-config.yaml` file before running the `oc adm node-image create` command.
 This is useful if you want to add more than one node at a time, or if you are specifying complex configurations.
 
 * Adding a single node using only command flags.
