removing broken api xref

--- a/rest_api/overview/index.adoc
+++ b/rest_api/overview/index.adoc
@@ -8,13 +8,13 @@
 ^| API ^| API group
 | xref:../network_apis/adminpolicybasedexternalroute-k8s-ovn-org-v1.adoc#adminpolicybasedexternalroute-k8s-ovn-org-v1[AdminPolicyBasedExternalRoute]
 | k8s.ovn.org/v1
-| xref:../monitoring_apis/alertingrule-monitoring-openshift-io-v1.adoc#alertingrule-monitoring-openshift-io-v1[AlertingRule]
+// | xref:../monitoring_apis/alertingrule-monitoring-openshift-io-v1.adoc#alertingrule-monitoring-openshift-io-v1[AlertingRule]
 | monitoring.openshift.io/v1
 | xref:../monitoring_apis/alertmanager-monitoring-coreos-com-v1.adoc#alertmanager-monitoring-coreos-com-v1[Alertmanager]
 | monitoring.coreos.com/v1
 | xref:../monitoring_apis/alertmanagerconfig-monitoring-coreos-com-v1beta1.adoc#alertmanagerconfig-monitoring-coreos-com-v1beta1[AlertmanagerConfig]
 | monitoring.coreos.com/v1beta1
-| xref:../monitoring_apis/alertrelabelconfig-monitoring-openshift-io-v1.adoc#alertrelabelconfig-monitoring-openshift-io-v1[AlertRelabelConfig]
+// | xref:../monitoring_apis/alertrelabelconfig-monitoring-openshift-io-v1.adoc#alertrelabelconfig-monitoring-openshift-io-v1[AlertRelabelConfig]
 | monitoring.openshift.io/v1
 | xref:../metadata_apis/apirequestcount-apiserver-openshift-io-v1.adoc#apirequestcount-apiserver-openshift-io-v1[APIRequestCount]
 | apiserver.openshift.io/v1
