--- a/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
@@ -4,6 +4,7 @@
 include::_attributes/common-attributes.adoc[]
 :context: installing-oadp-ibm-cloud
 :installing-oadp-ibm-cloud:
+:credentials: cloud-credentials
 
 
 toc::[]
