OSDOCS-12361: Documented the 4.17.2 z-stream notes

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -2842,9 +2842,67 @@ This section will continue to be updated over time to provide notes on enhanceme
 For any {product-title} release, always review the instructions on xref:../updating/updating_a_cluster/updating-cluster-web-console.adoc#updating-cluster-web-console[updating your cluster] properly.
 ====
 
+// 4.17.2
+[id="ocp-4-17-2_{context}"]
+=== RHSA-2024:8229 - {product-title} {product-version}.2 bug fix, and security update advisory
+
+Issued: 23 October 2024
+
+{product-title} release {product-version}.2, which includes security updates, is now available. The list of bug fixes that are included in the update is documented in the link:https://access.redhat.com/errata/RHSA-2024:8229[RHSA-2024:8229] advisory. The RPM packages that are included in the update are provided by the link:https://access.redhat.com/errata/RHBA-2024:8232[RHBA-2024:8232] advisory.
+
+Space precluded documenting all of the container images for this release in the advisory.
+
+You can view the container images in this release by running the following command:
+
+[source,terminal]
+----
+$ oc adm release info 4.17.2 --pullspecs
+----
+
+[id="ocp-4-17-2-enhancements_{context}"]
+==== Enhancements
+
+* The Operator SDK now correctly scaffolds the Dockerfile for `kube-rbac-proxy`. Additionally, the Operator SDK can now use `-rhel9` container images. (link:https://issues.redhat.com/browse/OCPBUGS-42953[*OCPBUGS-42953*])
+
+* When you start the limited live migration method and an issue exists with network overlap, the Cluster Network Operator (CNO) can now expose network overlap metrics for the issue. This is possible because the `openshift_network_operator_live_migration_blocked` metric now includes the new `NetworkOverlap` label. (link:https://issues.redhat.com/browse/OCPBUGS-39121[*OCPBUGS-39121*])
+
+[id="ocp-4-17-2-bug-fixes_{context}"]
+==== Bug fixes
+
+* Previously, the approval mechanism for certificate signing requests (CSRs) failed because the node name and internal DNS entry for a CSR did not match in terms of character case differences. With this release, an update to the approval mechanism for CSRs skips case-sensitive checks so that a CSR with a matching node name and internal DNS entry does not fail the check because of character case differences. (link:https://issues.redhat.com/browse/OCPBUGS-43312[*OCPBUGS-43312*])
+
+* Previously, a port conflict on the Cloud Credential Operator (CCO) and the `assisted-service` object caused cluster installations on {vmw-first} to fail. With this release, the installation program ignores the `pprof` module in the `assisted-service` object so that the port conflict no longer exists. (link:https://issues.redhat.com/browse/OCPBUGS-43069[*OCPBUGS-43069*])
+
+* Previously, when you attempted to use the `oc import-image` command to import an image in a {hcp} cluster, the command failed because of access issues with a private image registry. With this release, an update to `openshift-apiserver` pods in a {hcp} cluster resolves names that use the data plane so that the `oc import-image` command now works as expected with private image registries. (link:https://issues.redhat.com/browse/OCPBUGS-43051[*OCPBUGS-43051*])
+
+* Previously, for managed services on {hcp}, audit logs were sent to a local webhook service, `audit-webhook`. This caused issues for {hcp} pods that sent audit logs through the `konnectivity` service. With this release, `audit-webhook` is added to the list of `no_proxy` hosts so that {hcp} pods can send auti logs to the `audit-webhook` service. (link:https://issues.redhat.com/browse/OCPBUGS-42974[*OCPBUGS-42974*])
+
+* Previously, when you used the Agent-based Installer to install a cluster, `assisted-installer-controller` timed out or exited the installation process depending on whether `assisted-service` was unavailable on the rendezvous host. This situation caused the cluster installation to fail during CSR approval checks. With this release, an update to `assisted-installer-controller` ensures that the controller does not timeout or exit if `assisted-service` is unavailable. The CSR approval check now works as expected. (link:https://issues.redhat.com/browse/OCPBUGS-42839[*OCPBUGS-42839*])   
+
+* Previously, running the `openshift-install gather bootstrap --dir <workdir>` command might cause the installation program to skip the analysis of the collected logs. The command would output the following message:
++
+[source,terminal]
+----
+Invalid log bundle or the bootstrap machine could not be reached and bootstrap logs were not collected
+----
++
+With this release, the installation program can now analyze log handles that the `gather bootstrap --dir <workdir>` argument generates. (link:https://issues.redhat.com/browse/OCPBUGS-42806[*OCPBUGS-42806*])
+
+* Previously, when you used the *Developer* perspective with custom editors on the {product-title} web console, entering the `n` keyboard shortcut caused the namespace menu to unexpectedly open. This issue happened because the keyboard shortcut key did not account for custom editors. With this release, the namespace menu now accounts for custom editors and does not unexpectedly open when you enter the `n` keyboard shortcut. (link:https://issues.redhat.com/browse/OCPBUGS-42607[*OCPBUGS-42607*])
+
+* Previously, the installation program did not validate the maximum transmission unit (MTU) for a custom IPv6 network on {op-system-first}. If you specified a low value for the MTU, installation of the cluster would fail. With this release, the minimum MTU value for IPv6 networks is set to `1380`, where `1280` is the minimum MTU for IPv6 and `100` is the OVN-Kubernetes encapsulation overhead. With this release, the installation program now validates the MTU for a custom IPv6 network on {op-system-first} (link:https://issues.redhat.com/browse/OCPBUGS-41812[*OCPBUGS-41812*])
+
+* Previously, a {hcp} cluster that used mirroring release images might result in existing node pools to use the hosted cluster's operating system version instead of the `NodePool` version. With this release, a fix ensures that node pools use their own versions. (link:https://issues.redhat.com/browse/OCPBUGS-41552[*OCPBUGS-41552*])
+
+* Previously, after you creating a private {product-title} cluster on {azure-first}, the installation program did not mark the storage account that it created as private. As a result, the storage account was publically available. With this release, the installation program now correctly always marks the storage account as private regardless if the cluster is publically or privately available. (link:https://issues.redhat.com/browse/OCPBUGS-42349[*OCPBUGS-42349*])
+
+[id="ocp-4-17-2-updating_{context}"]
+==== Updating
+To update an {product-title} 4.16 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+
 // 4.17.1
-[id="ocp-4-17-1-ga_{context}"]
-=== RHSA-2024:7922 - {product-title} {product-version}.1 image release, bug fix, and security update advisory
+[id="ocp-4-17-1_{context}"]
+=== RHSA-2024:7922 - {product-title} {product-version}.1 bug fix, and security update advisory
 
 Issued: 16 October 2024
 
@@ -2934,14 +2992,12 @@ $ oc adm release info 4.17.1 --pullspecs
 
 * Previously, when the `globallyDisableIrqLoadBalancing` field was set to `true` in the `PerformanceProfile` object, the isolated CPUs were listed in the `IRQBALANCE_BANNED_CPULIST` variable instead of the `IRQBALANCE_BANNED_CPUS` variable. These variables are stored in `/etc/sysconfig/irqbalance`. Changing the value of the `globallyDisableIrqLoadBalancing` field from `true` to `false` did not update the `IRQBALANCE_BANNED_CPULIST` variable correctly. As a result, the number of CPUs available for load rebalancing did not increase because the isolated CPUs remained in the `IRQBALANCE_BANNED_CPULIST` variable. With this release, a fix ensures that isolated CPUs are now listed in the `IRQBALANCE_BANNED_CPUS` variable, so that the number of CPUs available for load rebalancing increase as expected. (link:https://issues.redhat.com/browse/OCPBUGS-42323[*OCPBUGS-42323*])
 
-// OCPBUGS-39121 is a known issue? Martin K to confirm.
-
 [id="ocp-4-17-1-updating_{context}"]
 ==== Updating
 To update an {product-title} 4.16 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
 
 //Update with relevant advisory information
-[id="ocp-4-17-0-ga_{context}"]
+[id="ocp-4-17-0_{context}"]
 === RHSA-2024:3718 - {product-title} {product-version}.0 image release, bug fix, and security update advisory
 
 Issued: 01 October 2024
