OTEL: fix instrumentation example
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -26,7 +26,7 @@ Instrumentation options are specified in the `OpenTelemetryCollector` custom res
 apiVersion: opentelemetry.io/v1alpha1
 kind: Instrumentation
 metadata:
-  name: java-instrumentation
+  name: instrumentation
 spec:
   env:
     - name: OTEL_EXPORTER_OTLP_TIMEOUT
@@ -34,14 +34,29 @@ spec:
   exporter:
     endpoint: http://production-collector.observability.svc.cluster.local:4317
   propagators:
-    - w3c
+    - tracecontext
+    - baggage
   sampler:
     type: parentbased_traceidratio
-    argument: "0.25"
-  java:
+    argument: "1"
+  python:
     env:
-    - name: OTEL_JAVAAGENT_DEBUG
-      value: "true"
+      # Required if endpoint is set to :4317.
+      # Python auto-instrumentation uses http/proto by default
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: http://production-collector.observability.svc.cluster.local:4318
+  dotnet:
+    env:
+      # Required if endpoint is set to :4317.
+      # Dotnet auto-instrumentation uses http/proto by default
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: http://production-collector.observability.svc.cluster.local:4318
+  go:
+    env:
+      # Required if endpoint is set to :4317.
+      # Go auto-instrumentation uses http/proto by default
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: http://production-collector.observability.svc.cluster.local:4318
 ----
 
 //[cols=",,",options="header",]
