Add protocol table
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -122,6 +122,34 @@ The `Instrumentation` custom resource configures only OTLP exporter:
 <5> Cert defines the key of client certificate (e.g. tls.crt) in the secret or absolute path to a certificate. The absolute path can be used when the certificate is already present on the workload filesystem.
 <6> Key defines the key of client key (e.g. tls.key) in the secret or absolute path to a key. The absolute path can be used when the key is already present on the workload filesystem.
 
+[id="otel-configuration-auto-instrumentation-exporter_{context}"]
+=== Default protocol for auto-instrumentation
+
+[options="header"]
+[cols="a, a"]
+|===
+|Auto-instrumentation | Default protocol
+
+| Java 1.x
+| `otlp/grpc`
+
+| Java 2.x
+| `otlp/http`
+
+| Python
+| `otlp/http`
+
+| .NET
+| `otlp/http`
+
+| Go
+| `otlp/http`
+
+| Apache HTTP Server
+| `otlp/grpc`
+
+|===
+
 [id="otel-using-instrumentation-cr-with-service-mesh_{context}"]
 == Using the instrumentation CR with Service Mesh
 
