--- a/observability/logging/logging-6.0/log6x-about.adoc
+++ b/observability/logging/logging-6.0/log6x-about.adoc
@@ -34,7 +34,23 @@ The Cluster Logging Operator manages the deployment and configuration of the col
 == Validation
 Logging includes extensive validation rules and default values to ensure a smooth and error-free configuration experience. The `ClusterLogForwarder` resource enforces validation checks on required fields, dependencies between fields, and the format of input values. Default values are provided for certain fields, reducing the need for explicit configuration in common scenarios.
 
-=== Quick Start
+== Quick Start
+
+OpenShift Logging supports two data models:
+
+* ViaQ (General Availability)
+* OTEL (Technology Preview)
+
+You can select either of these data models based on your requirements. The ViaQ data model is the default and fully supported option, while OTEL uses the OpenTelemetry standards and is not fully supported.
+
+=== Quick Start with ViaQ
+
+To use the default ViaQ data model, follow these steps:  
+
+[NOTE]
+====
+The ViaQ data model is now deprecated and is planned to be removed in a future logging releases.
+====
 
 .Prerequisites
 * Cluster administrator permissions
@@ -163,5 +179,156 @@ spec:
     outputRefs:
     - default-lokistack
 ----
+
+. Verify that logs are visible in the Log section of the Observe tab in the OpenShift web console.
+
+=== Quick Start with OTEL
+
+To configure OTLP ingestion and enable the OTEL data model, follow these steps:
+
+:FeatureName: The OpenTelemetry Protocol (OTLP) output log forwarder
+include::snippets/technology-preview.adoc[]
+
+.Prerequisites
+* Cluster administrator permissions
+
+.Procedure
+
+. Install the `OpenShift Logging` and `Loki` Operators from OperatorHub.
+
+. Create a `LokiStack` custom resource (CR) in the `openshift-logging` namespace:
++
+[source,yaml]
+----
+apiVersion: loki.grafana.com/v1
+kind: LokiStack
+metadata:
+  name: logging-loki
+  namespace: openshift-logging
+spec:
+  managementState: Managed
+  size: 1x.extra-small
+  storage:
+    schemas:
+    - effectiveDate: '2022-06-01'
+      version: v13 # <1>
+    secret:
+      name: logging-loki-s3
+      type: s3
+    storageClassName: gp3-csi
+  tenants:
+    mode: openshift-logging
+----
+
+. Create a service account for the collector:
++
+[source,shell]
+----
+$ oc create sa collector -n openshift-logging
+----
+
+. Create a `ClusterRole` for the collector:
++
+[source,yaml]
+----
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: logging-collector-logs-writer
+rules:
+- apiGroups:
+  - loki.grafana.com
+  resourceNames:
+  - logs
+  resources:
+  - application
+  - audit
+  - infrastructure
+  verbs:
+  - create
+----
+
+. Bind the `ClusterRole` to the service account:
++
+[source,shell]
+----
+$ oc adm policy add-cluster-role-to-user logging-collector-logs-writer -z collector
+----
+
+. Install the Cluster Observability Operator.
+
+. Create a `UIPlugin` to enable the Log section in the Observe tab:
++
+[source,yaml]
+----
+apiVersion: observability.openshift.io/v1alpha1
+kind: UIPlugin
+metadata:
+  name: logging
+spec:
+  type: Logging
+  logging:
+    lokiStack:
+      name: logging-loki
+----
+
+. Add additional roles to the collector service account:
++
+[source,shell]
+----
+$ oc project openshift-logging
+$ oc adm policy add-cluster-role-to-user collect-application-logs -z collector
+$ oc adm policy add-cluster-role-to-user collect-audit-logs -z collector
+$ oc adm policy add-cluster-role-to-user collect-infrastructure-logs -z collector
+----
+
+. Create a `ClusterLogForwarder` CR to configure log forwarding:
++
+[source,yaml]
+----
+apiVersion: observability.openshift.io/v1
+kind: ClusterLogForwarder
+metadata:
+  name: my-logforwarder
+  namespace: my-app-namespace
+  annotations:
+    observability.openshift.io/tech-preview-otlp-output: "enabled" # <1>
+spec:
+  outputs:
+    - type: lokistack # <2>
+      name: loki-otlp
+      lokiStack:
+        target:
+          name: my-lokistack
+          namespace: openshift-logging
+        dataModel: Otel # <3>
+        tuning:
+          compression: none
+        authentication:
+          token:
+            from: serviceAccount
+      tls: # <4>
+        ca:
+          key: service-ca.crt (7)
+          configMapName: openshift-service-ca.crt (7)
+  pipelines:
+   - name: my-pipeline
+     inputRefs:
+     - application
+     - infrastructure
+     outputRefs:
+     - loki-otlp
+  serviceAccount:
+    name: logger-admin
+----
+<1> Use the annotation to enable the `Otel` output, which is a Technology Preview feature.
+<2> Define the `OTLP` output type as `lokistack`.
+<3> DataModel is `Otel`.
+<4> `tls` spec identifies the keys and secret to the respective certificates that they represent.
++
+[NOTE]
+====
+You cannot use `lokistack` `labelKeys` when `dataModel` is `Otel`.
+====
 
 . Verify that logs are visible in the Log section of the Observe tab in the OpenShift web console.
