Adds small note to allow-from-router network policy

--- a/modules/nw-networkpolicy-about.adoc
+++ b/modules/nw-networkpolicy-about.adoc
@@ -134,6 +134,11 @@ For example, for the `NetworkPolicy` objects defined in previous samples, you ca
 
 Use the following `NetworkPolicy` to allow external traffic regardless of the router configuration:
 
+[NOTE]
+====
+If your Ingress Controller is configured with the `endpointPublishingStrategy.type=HostNetwork``, which is the default for many {product-title} deployments, including bare metal, the `allow-from-router` network  will not work as expected. This is because network policies in OVN-Kubernetes behave differently based on whether the router pod and application pod are on the same node or different nodes. To ensure proper traffic flow between host network pods, use `the allow-from-hostnetwork` network policy. 
+====
+
 [source,yaml]
 ----
 apiVersion: networking.k8s.io/v1
